bin/tests/errors/sema/sema_err_signed_unsigned.swg
#global fileprivate

#assert(-10'u32 == -10)      // swc-expected-error {{sema_err_signed_unsigned}}
